# searchEngine

./: CMakeLists.txt  README.md
include/: convertJson.h  invertedindex.h  mainFile.h  searchServer.h
json/: README.txt  config.json
src/: CMakeLists.txt  convertJson.cpp  invertedindex.cpp  main.cpp  mainFile.cpp  searchServer.cpp
test/: CMakeLists.txt  main.cpp
test/testFiles/TestBasic2TestSimple/: test0.txt
test/testFiles/TestSimpleTestTop5/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt  file5.txt
test/testFiles/testBasic/: test1.txt
